# CGBGEAR_SERVER

./: .gitignore  FIX_TMPFILE_PERMISSION.md  README.md  WEB_SERVER_CONFIG.md  gunicorn_conf.py  pyproject.toml  uwsgi.ini
src/backend/: activity_routes.py  app.py  db.py  translation.py
src/backend/utils/: 1.html  email_utils.py  hash.py  id.py  response.py
